<resources>
    <string name="app_name">Салам</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="check_internet">Проверьте интернет соединение</string>
    <string name="need_auth">Ошибка авторизации. Вам необходимо заново авторизоваться в приложении</string>
    <string name="invalid_login_or_password">Неверный логин или пароль</string>
    <string name="invalid_credentials">Неверный телефон или пароль</string>
    <string name="failure">Ошибка</string>
    <string name="successful">Успех</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logged_out">Logged out</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="phone_hint">Номер телефона</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="password_hint">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="login">Войти</string>
    <string name="registration">Зарегестрироваться</string>
    <string name="version_title">Версия %s</string>
    <string name="back">Назад</string>
    <string name="privacy_policy_confirmed">Продолжая вы принимаете условия пользовательского \nсоглашения</string>
    <string name="user_agreement">пользовательского \nсоглашения</string>
    <string name="phone_registration_hint">+996 (---) --- ---</string>
    <string name="next">Продолжить</string>
    <string name="enter_sms_code">Введите код из СМС</string>
    <string name="we_sent_sms_code">Мы отправили вам СМС-код</string>
    <string name="code_dont_received">Не пришел СМС-код</string>
    <string name="write_pin">Придумайте пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="cant_login">Не могу войти</string>
    <string name="bio_log_in">Вход по биометрии</string>
    <string name="use_bio_for_log_in">Использовать биометрию \nдля входа в приложение?</string>
    <string name="use_bio_opinion">Вы будете автоматически входить без ввода пароля</string>
    <string name="use_only_password">Я хочу использовать только пароль</string>
    <string name="use_bio">Использовать биометрию</string>
    <string name="biometric_unavailable">Биометрия недоступна или не настроена на устройстве</string>
    <string name="welcome_title">Добро пожаловать, \n%s!</string>
    <string name="notification">Уведомление</string>
    <string name="total_balance">Общий баланс</string>
    <string name="som">Сом</string>
    <string name="usdt">USDT TRC20</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="ethereum">Ethereum</string>
    <string name="digital">Салам</string>
    <string name="digital_wallet">Салам</string>
    <string name="convert_esom">Конвертировать ЕСом</string>
    <string name="accept_esom">Принять ЕСом</string>
    <string name="rate_currency">Курс валют</string>
    <string name="kgs">KGS</string>
    <string name="fiat_som">Фиатный сом</string>
    <string name="last_trans">Последние транзакции</string>
    <string name="etc">Ещё</string>
    <string name="convert_som">Конвертация в сом</string>
    <string name="convert_digital">Конвертация в салам</string>
    <string name="convert_eth">Конвертация в Ethereum</string>
    <string name="convert_bitcoin">Конвертация в Bitcoin</string>
    <string name="convert_usdt">Конвертация в USDT TRC20</string>
    <string name="income_som">Пополнение в сом</string>
    <string name="income_digital">Пополнение в салам</string>
    <string name="income_eth">Пополнение в Ethereum</string>
    <string name="income_bitcoin">Пополнение в Bitcoin</string>
    <string name="income_usdt">Пополнение в USDT TRC20</string>
    <string name="expense_som">Списание в сом</string>
    <string name="expense_digital">Списание в салам</string>
    <string name="expense_eth">Списание в Ethereum</string>
    <string name="expense_bitcoin">Списание в Bitcoin</string>
    <string name="expense_usdt">Списание в USDT TRC20</string>
    <string name="inflow_som">Входящий перевод в сом</string>
    <string name="inflow_digital">Входящий перевод в салам</string>
    <string name="inflow_eth">Входящий перевод в Ethereum</string>
    <string name="inflow_bitcoin">Входящий перевод в Bitcoin</string>
    <string name="inflow_usdt">Входящий перевод в USDT TRC20</string>
    <string name="transfer_som">Исходящий перевод в сом</string>
    <string name="transfer_digital">Исходящий перевод в салам</string>
    <string name="transfer_eth">Исходящий перевод в Ethereum</string>
    <string name="transfer_bitcoin">Исходящий перевод в Bitcoin</string>
    <string name="transfer_usdt">Исходящий перевод в USDT TRC20</string>
    <string name="search">Поиск</string>
    <string name="actives">Активы</string>
    <string name="without_transactions">Без переводов</string>
    <string name="choose_period">Выбрать период</string>
    <string name="start">Начало</string>
    <string name="end">Конец</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wensday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>
    <string name="choose">Выбрать</string>
    <string name="success">Успешно!</string>
    <string name="trans_complete">Транзакция проведена</string>
    <string name="account_ban">Аккаунт заблокирован</string>
    <string name="trans_not_complete">Транзакция не проведена</string>
    <string name="wallet_ban">Ваш кошелек USTD trx20 заблокирован</string>
    <string name="reject">Отклонено!</string>
    <string name="for_3_month">За последние 3 месяца</string>
    <string name="for_month">За месяц</string>
    <string name="for_week">За неделю</string>
    <string name="transfer">Перевод</string>
    <string name="sum">Сумма</string>
    <string name="comission">Комиссия</string>
    <string name="transfer_btn_title">Перевести</string>
    <string name="convertation">Конвертация</string>
    <string name="convert">Конвертировать</string>
    <string name="receive">Получение</string>
    <string name="receiving_opinion">Для получения %s, при переводе с другого аккаунта укажите в качестве получателя ваш номер телефона</string>
    <string name="copy_number_phone">Скопировать номер телефона</string>
    <string name="copy_address">Скопировать адрес кошелька</string>
    <string name="scan_qr">просканируйте qr-код</string>
    <string name="qr_scan_source_title">&#1057;&#1082;&#1072;&#1085;&#1080;&#1088;&#1086;&#1074;&#1072;&#1090;&#1100; QR-&#1082;&#1086;&#1076;</string>
    <string name="qr_scan_camera">&#1050;&#1072;&#1084;&#1077;&#1088;&#1072;</string>
    <string name="qr_scan_gallery">&#1043;&#1072;&#1083;&#1077;&#1088;&#1077;&#1103;</string>
    <string name="qr_scan_empty">&#1053;&#1077; &#1091;&#1076;&#1072;&#1083;&#1086;&#1089;&#1100; &#1089;&#1095;&#1080;&#1090;&#1072;&#1090;&#1100; QR-&#1082;&#1086;&#1076;</string>
    <string name="support">Техподдержка</string>
    <string name="support_title">Здравствуйте, Асан! \nКак мы можем Вам помочь?</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="profile">Профиль</string>
    <string name="user_fio">ФИО пользователя</string>
    <string name="number_phone">Номер телефона</string>
    <string name="email">E-mail</string>
    <string name="help">Помощь</string>
    <string name="tech_help">Техподдержка</string>
    <string name="personal_call">Персональный менеджер звонок</string>
    <string name="settings">Настройки</string>
    <string name="language">Язык</string>
    <string name="push_notifications">Push уведомления</string>
    <string name="safety">Безопасность</string>
    <string name="change_pass">Сменить пароль</string>
    <string name="main">Главная</string>
    <string name="history">История</string>
    <string name="profile_title">Профиль</string>
    <string name="finance">Финансы</string>
    <string name="finance_opinion">Выгрузка фин.отчета на почту</string>
    <string name="etc_title">Прочее</string>
    <string name="about_app">О приложении</string>
    <string name="privacy_policy">Пользовательское соглашение</string>
    <string name="choose_active">Выбрать актив</string>
    <string name="send">Отправить</string>
    <string name="get">Получить</string>
    <string name="convert_to_som">Конвертировать в СОМ</string>
    <string name="convert_to_salam">Конвертировать в САЛАМ</string>
    <string name="login_hint">Логин</string>
    <string name="enter_login">Введите логин пользователя</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="phone_copy_success">Номер телефона скопирован</string>
    <string name="adres_success_copy">Адрес кошелька скопирован</string>
    <string name="change_type_withdraw">Поменять способ перевода</string>
    <string name="buy_usdt">Купить USDT</string>
    <string name="buy_btc">Купить BTC</string>
    <string name="buy_eth">Купить ETH</string>
    <string name="logout">Выйти</string>
    <string name="anti_fraud">Операция приостановлена системой финконтроля</string>
    <string name="lock_create_pin_title">Создайте PIN-код</string>
    <string name="lock_change_pin_title">Измените PIN-код</string>
    <string name="lock_create_pattern_title">Создайте графический ключ</string>
    <string name="lock_change_pattern_title">Измените графический ключ</string>
    <string name="lock_enter_pin">Введите PIN-код</string>
    <string name="lock_confirm_pin">Повторите PIN-код</string>
    <string name="lock_enter_pattern">Нарисуйте графический ключ</string>
    <string name="lock_confirm_pattern">Повторите графический ключ</string>
    <string name="lock_switch_to_pattern">Использовать графический ключ</string>
    <string name="lock_switch_to_pin">Использовать PIN-код</string>
    <string name="lock_reset">Сбросить</string>
    <string name="lock_pin_not_match">PIN-коды не совпадают</string>
    <string name="lock_pattern_not_match">Графические ключи не совпадают</string>
    <string name="lock_pattern_min_points">Минимум 4 точки</string>
    <string name="lock_wrong_password">Неверный код доступа</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="send_title">Отправить</string>
    <string name="available_title">Доступно: %s</string>
    <string name="receive_title">Получить</string>
    <string name="all">Все</string>
    <string name="yes">Да</string>
    <string name="want_receipt_trans">Хотите сделать квитанцию по переводу?</string>
    <string name="transfer_confirmation_title">Вы уверены, что хотите сделать перевод на сумму: %1$s, на счет: %2$?</string>
    <string name="confirm">Подтвердить</string>
    <string name="payment_successful">Платеж успешно проведен</string>
    <string name="transaction_details">Детали транзакции</string>
    <string name="date_and_time">Дата и время</string>
    <string name="receipt_number">Номер квитанции</string>
    <string name="paid_from_account">Оплачено со счета</string>
    <string name="recipient">Получатель</string>
    <string name="total">Итого</string>
    <string name="share_success_operation">Поделиться платежом</string>
    <string name="success_share_text">Платеж успешно проведен\nОперация: %1$s\nСумма: %2$s\nДата и время: %3$s\nНомер квитанции: %4$s\nОплачено со счета: %5$s\nПолучатель: %6$s</string>
    <string name="empty_value">-</string>
    <string name="receipt_operation_not_found">&#1057;&#1077;&#1088;&#1074;&#1077;&#1088; &#1085;&#1077; &#1074;&#1077;&#1088;&#1085;&#1091;&#1083; &#1085;&#1086;&#1084;&#1077;&#1088; &#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080; &#1076;&#1083;&#1103; &#1082;&#1074;&#1080;&#1090;&#1072;&#1085;&#1094;&#1080;&#1080;</string>
    <string name="cancel">Отменить</string>
</resources>