<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.MaterialComponents.BottomSheetDialog"
    android:theme="@style/Theme.MaterialComponents.BottomSheetDialog"
    tools:ignore="MissingConstraints"
    tools:context=".screens.history.dialog.ChooseDateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_20dp"
        android:background="@drawable/period_bottom_background">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_period"
            android:textColor="#1D1D1B"
            android:fontFamily="@font/mont_bold"
            android:textSize="@dimen/_16sp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/start_period_layout"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/end_period_layout"
            android:background="@drawable/start_period_background"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="@dimen/_10dp">
            <ImageView
                android:id="@+id/start_period_icon"
                android:layout_width="@dimen/_23dp"
                android:layout_height="@dimen/_27dp"
                android:src="@drawable/white_period_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/_16dp"/>
            <TextView
                android:id="@+id/start_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sp"
                android:fontFamily="@font/mont_medium"
                app:layout_constraintTop_toTopOf="@id/start_period_icon"
                app:layout_constraintStart_toEndOf="@id/start_period_icon"
                android:layout_marginStart="@dimen/_12dp"
                android:layout_marginTop="-3dp"/>
            <TextView
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="13.07.2025"
                android:textSize="@dimen/_15sp"
                android:textColor="@color/white"
                android:fontFamily="@font/mont_semibold"
                app:layout_constraintTop_toBottomOf="@id/start_title"
                app:layout_constraintStart_toStartOf="@id/start_title"
                android:layout_marginTop="-4dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/end_period_layout"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_50dp"
            android:elevation="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginStart="@dimen/_10dp"
            app:layout_constraintStart_toEndOf="@id/start_period_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/currency_background"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="@dimen/_10dp">
            <ImageView
                android:id="@+id/end_period_icon"
                android:layout_width="@dimen/_23dp"
                android:layout_height="@dimen/_27dp"
                android:src="@drawable/gray_period_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/_16dp"/>
            <TextView
                android:id="@+id/end_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:textColor="#535353"
                android:textSize="@dimen/_11sp"
                android:fontFamily="@font/mont_medium"
                app:layout_constraintTop_toTopOf="@id/end_period_icon"
                app:layout_constraintStart_toEndOf="@id/end_period_icon"
                android:layout_marginStart="@dimen/_12dp"
                android:layout_marginTop="-3dp"/>
            <TextView
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="13.07.2025"
                android:textSize="@dimen/_15sp"
                android:textColor="#535353"
                android:fontFamily="@font/mont_semibold"
                app:layout_constraintTop_toBottomOf="@id/end_title"
                app:layout_constraintStart_toStartOf="@id/end_title"
                android:layout_marginTop="-4dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/calendar_layout"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@id/start_period_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp">
            <LinearLayout
                android:layout_marginBottom="@dimen/_9dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/month_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Январь 2025"
                    android:textSize="@dimen/_16sp"
                    android:fontFamily="@font/mont_semibold"
                    android:textColor="#1D1D1B"
                    android:layout_gravity="start"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/right_red_arrow"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_9dp"/>
                <View
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/previous_month"
                    android:layout_marginEnd="@dimen/_28dp"
                    android:layout_width="@dimen/_10dp"
                    android:layout_height="@dimen/_22dp"
                    android:rotation="180"
                    android:src="@drawable/right_red_arrow"/>
                <ImageView
                    android:id="@+id/next_month"
                    android:layout_width="@dimen/_10dp"
                    android:layout_height="@dimen/_22dp"
                    android:src="@drawable/right_red_arrow"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#F0EEEE"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_27dp">
                <TextView android:text="@string/monday" style="@style/DayHeader" android:fontFamily="@font/mont_semibold"/>
                <TextView android:text="@string/tuesday" style="@style/DayHeader" android:fontFamily="@font/mont_semibold"/>
                <TextView android:text="@string/wensday" style="@style/DayHeader" android:fontFamily="@font/mont_semibold"/>
                <TextView android:text="@string/thursday" style="@style/DayHeader" android:fontFamily="@font/mont_semibold"/>
                <TextView android:text="@string/friday" style="@style/DayHeader" android:fontFamily="@font/mont_semibold"/>
                <TextView android:text="@string/saturday" style="@style/DayHeader" android:fontFamily="@font/mont_semibold"/>
                <TextView android:text="@string/sunday" style="@style/DayHeader" android:fontFamily="@font/mont_semibold"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/_5dp"
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_27dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37dp"
            android:background="@drawable/start_period_background"
            android:layout_marginHorizontal="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@id/calendar_layout"
            android:layout_marginTop="@dimen/_20dp">
            <ImageButton
                android:id="@+id/choose_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/choose"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp"
                android:fontFamily="@font/mont_semibold"
                android:gravity="center"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>